crates/uitest/fixtures/mir_check/move_view_param.snap
---
source: crates/uitest/tests/mir_check.rs
expression: res
input_file: fixtures/mir_check/move_view_param.fe
---
error[10-0002]: move conflict in `fn make_pair`
  ┌─ move_view_param.fe:2:6
  │
2 │     (a, b)
  │      ^  ^ cannot move out of a view parameter
  │      │   
  │      cannot move out of a view parameter
